--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,21 @@ cmake_minimum_required(VERSION 3.20)
 
 project(CppTemplate VERSION 1.0 LANGUAGES CXX)
 
+option(USE_CLANG_TIDY "Use clang-tidy for static analysis" OFF)
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+if(USE_CLANG_TIDY)
+    find_program(CLANG_TIDY_EXE NAMES "clang-tidy")
+    if(CLANG_TIDY_EXE)
+        message(STATUS "clang-tidy found: ${CLANG_TIDY_EXE}")
+        set(CMAKE_C_CLANG_TIDY "${CLANG_TIDY_EXE}")
+        set(CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY_EXE}")
+    else()
+        message(WARNING "clang-tidy requested but executable not found")
+    endif()
+endif()
 
 add_subdirectory(lib)
 add_subdirectory(host)
