--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -17,11 +17,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup Conan
+        run: |
+          python -m pip install conan
+
       - name: Generate artifacts
         run: |
-          cmake --preset default
-          cmake --build --preset default
-
-      - name: Test artifacts
-        run: |
-          ctest --preset default
+          conan profile detect
+          conan build . --build=missing
