--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,17 +1,9 @@
-include(FetchContent)
-
-FetchContent_Declare(
-  googletest
-  GIT_REPOSITORY https://github.com/google/googletest.git
-  GIT_TAG        v1.14.0)
-
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
+find_package(GTest REQUIRED)
 
 file(GLOB TEST_SRC_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/*.cpp)
 
 add_executable(${PROJECT_NAME}.Test ${TEST_SRC_FILES})
-target_link_libraries(${PROJECT_NAME}.Test PRIVATE ${PROJECT_NAME}.Library gtest_main)
+target_link_libraries(${PROJECT_NAME}.Test PRIVATE ${PROJECT_NAME}.Library gtest::gtest)
 
 include(GoogleTest)
 gtest_discover_tests(${PROJECT_NAME}.Test)
