--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,4 +1,6 @@
 file(GLOB LIB_SRC_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/*.cpp)
 
-add_library(${PROJECT_NAME}.Library ${LIB_SRC_FILES})
-target_include_directories(${PROJECT_NAME}.Library PUBLIC include)
+add_library(${PROJECT_NAME} ${LIB_SRC_FILES})
+target_include_directories(${PROJECT_NAME} PUBLIC include)
+
+install(TARGETS ${PROJECT_NAME} DESTINATION lib)
